--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Monitor Binance Listings
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # Every 10 minutes
+    - cron: '59*1'  # Every 10 minutes
   workflow_dispatch:        # Allows manual triggering
 
 permissions:
